# sparrow-cli

./: README.md  pyproject.toml
sparrow_cli/: __init__.py  __main__.py
sparrow_cli/api/: __init__.py  callback.py  new.py  version.py
sparrow_cli/templating/: fetchers.py  processors.py
sparrow_cli/wizards/: forms.py  questions.py
