[tool.poetry]
name = "sparrow-cli"
version = "0.1.0"
description = ""
authors = ["shen <goodstudyQAQ@163.com>"]
readme = "README.md"
packages = [{include = "sparrow_cli"}]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.7.0"
rich = "^10.14.0"
cached-property = "^1.5.2"
copier = "^5.1.0"
markupsafe = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
